# sierras

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  sierras.py  test_sierras.py  tox.ini
.github/workflows/: release.yml  sierras_ci.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  install.rst  module.rst  tutorial.ipynb
pyrrhenius/: arrhenius.py  diffusion.py
sierras/: __init__.py  arrhenius.py  diffusion.py  get_diffusion_coefficient.py  units_conversor.py
tests/: conftest.py  test_arrhenius.py  test_diffusion.py  test_plot.py  test_sierras.py
tests/test_data/: desouza06-LJ.csv  fuller53-Si.csv  wei-zhong08-KG.csv
